--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Multi-task View Synthesis with Neural Radiance Fields</h1>
-          <h4 class="title is-4">ICCV 2023</h4>
+          <h1 class="title is-1 publication-title">ViCA-NeRF: View-Consistency-Aware 3D Editing of Neural Radiance Fields</h1>
+          <h4 class="title is-4">Neurips 2023</h4>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://zsh2000.github.io/">Shuhong Zheng</a><sup>1,*</sup>,</span>
