--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
           <h4 class="title is-4">Neurips 2023</h4>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://zsh2000.github.io/">Shuhong Zheng</a><sup>1,*</sup>,</span>
-            <span class="author-block">
-              <a href="https://zpbao.github.io/">Zhipeng Bao</a><sup>2,*</sup>,</span>
-            <span class="author-block">
-              <a href="http://www.cs.cmu.edu/~hebert/">Martial Hebert</a><sup>2</sup>,
-            </span>
+              <a >Jiahua Dong</a><sup>1,*</sup>,</span>
             <span class="author-block">
               <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a><sup>1</sup>
             </span>
