--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   
-  <title>Multi-task View Synthesis with Neural Radiance Fields</title>
+  <title>ViCA-NeRF: View-Consistency-Aware 3D Editing of Neural Radiance Fields</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -49,7 +49,7 @@
           <h4 class="title is-4">Neurips 2023</h4>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a >Jiahua Dong</a><sup>1,*</sup>,</span>
+              <a >Jiahua Dong</a><sup></sup>,</span>
             <span class="author-block">
               <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a><sup>1</sup>
             </span>
