--- a/index.html
+++ b/index.html
@@ -49,16 +49,15 @@
           <h4 class="title is-4">Neurips 2023</h4>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a >Jiahua Dong</a><sup></sup>,</span>
+              <a >Jiahua Dong</a>,</span>
             <span class="author-block">
-              <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a><sup>1</sup>
+              <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
             </span>
   
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Illinois Urbana-Champaign,</span>
-            <span class="author-block"><sup>2</sup>Carnegie Mellon University</span>
+            <span class="author-block">University of Illinois Urbana-Champaign,</span>
           </div>
 
           <div class="column has-text-centered">
