--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </div>
 </section>
 
-<section class="hero teaser">
+<!-- <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay muted loop playsinline height="100%">
@@ -125,7 +125,7 @@
       </h2>
     </div>
   </div>
-</section>
+</section> -->
 
 
 
@@ -174,7 +174,7 @@
 
 
 
-<section class="section">
+<!-- <section class="section">
   <div class="column is-full-width">
 <!--   <div class="container is-max-desktop"> -->
 
@@ -194,9 +194,9 @@ and Cross-Task Attention (CTA) modules. It predicts multiple scene properties fo
 </section>
 
     <section class="section">
-  <div class="column is-full-width">
+  <div class="column is-full-width"> -->
     <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
+    <!-- <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
         <div class="content has-text-justified">
@@ -238,7 +238,7 @@ and Cross-Task Attention (CTA) modules. It predicts multiple scene properties fo
             <a href="https://bmild.github.io/llff/">LLFF</a> (from left to right, top to bottom) are evaluated:
           </p>
           <div align="center"><img src="./static/images/ood.png" alt="" width=85% /></span></div>
-        </div>
+        </div> -->
 <!--         <div class="columns is-vcentered interpolation-panel">
           <div class="column is-3 has-text-centered">
             <img src="./static/images/interpolate_start.jpg"
