--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">University of Illinois Urbana-Champaign,</span>
+            <span class="author-block">University of Illinois Urbana-Champaign</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://zsh2000.github.io/mtvs.github.io/static/paper/mtvs.pdf"
+                <a href="Dongjiahua/VICA-NeRF/static/images/new_pip.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
