--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="Dongjiahua/VICA-NeRF/static/images/new_pip.pdf"
+                <a href="https://openreview.net/pdf?id=Pk49a9snPe"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -94,7 +94,7 @@
               
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/zsh2000/MuvieNeRF"
+                <a href="https://github.com/Dongjiahua/VICA-NeRF"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -185,7 +185,7 @@
         <div class="content has-text-justified">
         MuvieNeRF is a unified framework for multi-task view synthesis equipped with Cross-View Attention (CVA)
 and Cross-Task Attention (CTA) modules. It predicts multiple scene properties for arbitrary 3D coordinates with nearby-view annotations.
-        <div align="center"><img src="./static/images/pipeline_web.png" alt="" width=90% /></span></div>
+        <div align="center"><img src="./static/images/new_pip.png" alt="" width=90% /></span></div>
         </div>
       </div>
     </div>
