--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               </video>
               <!-- <p class="is-bold"></p> -->
             </div>
-            <div class="column is-3 has-text-centered">
+            <!-- <div class="column is-3 has-text-centered">
               <img src="./static/images/link2.png" class="interpolation-image"
                 alt="Interpolation end reference image." />
               <p class="is-bold">End Frame</p>
@@ -232,7 +232,7 @@
                         type="video/mp4">
               </video>
               <!-- <p class="is-bold"></p> -->
-            </div>
+            </div> -->
 
           </div>
           <br />
