--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   </section>
 
   <section class="section">
-    <div class="column is-full-width">
+    <div class="container is-max-desktop">
       <!-- Animation. -->
       <div class="columns is-centered">
         <div class="column is-full-width">
