--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
     </div>
 
   </section>
-  <!-- <section class="section">
-  <div class="column is-full-width">
+<section class="section">
+  <div class="container is-max-desktop">
 <!--   <div class="container is-max-desktop"> -->
 
   <!-- Abstract. -->
