--- a/index.html
+++ b/index.html
@@ -212,24 +212,26 @@
             <div class="column is-3 has-text-centered">
               <img src="./static/images/link1.png" class="interpolation-image"
                 alt="Interpolate start reference image." />
-              <p>Start Frame</p>
+                <p class="is-bold">End key view</p>
             </div>
             <div class="column interpolation-video-column">
               <video id="link1" autoplay muted loop playsinline height="100%">
                 <source src="./static/videos/new_link_ours.mp4"
                         type="video/mp4">
               </video>
+              <p class="is-bold">Rendered</p>
             </div>
             <div class="column is-3 has-text-centered">
               <img src="./static/images/link2.png" class="interpolation-image"
                 alt="Interpolation end reference image." />
-              <p class="is-bold">End Frame</p>
+              <p class="is-bold">Edited key view</p>
             </div>
             <div class="column interpolation-video-column">
               <video id="link2" autoplay muted loop playsinline height="100%">
                 <source src="./static/videos/new_link_ours_2.mp4"
                         type="video/mp4">
               </video>
+              <p class="is-bold">Rendered</p>
             </div>
 
           </div>
