--- a/index.html
+++ b/index.html
@@ -173,23 +173,24 @@
     </div>
 
   </section>
-<section class="section">
-  <div class="container is-max-desktop">
-<!--   <div class="container is-max-desktop"> -->
+  <section class="section">
+    <div class="container is-max-desktop">
+      <!--   <div class="container is-max-desktop"> -->
 
-  <!-- Abstract. -->
-  <div class="columns is-centered has-text-centered">
-    <div class="column is-four-fifths">
-      <h2 class="title is-3">ViCA-NeRF Pipeline</h2>
-      <div class="content has-text-justified">
-        ViCA-NeRF is an efficient, controllable NeRF editing pipeline which can edit 3D scenes with text instructions.
-        It shows better generalizability for various text instructions
-        <div align="center"><img src="./static/images/new_pip.png" alt="" width=100% /></span></div>
+      <!-- Abstract. -->
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">ViCA-NeRF Pipeline</h2>
+          <div class="content has-text-justified">
+            ViCA-NeRF is an efficient, controllable NeRF editing pipeline which can edit 3D scenes with text
+            instructions.
+            It shows better generalizability for various text instructions
+            <div align="center"><img src="./static/images/new_pip.png" alt="" width=100% /></span></div>
+          </div>
+        </div>
       </div>
+      <!--/ Abstract. -->
     </div>
-  </div>
-  <!--/ Abstract. -->
-  </div>
   </section>
 
   <section class="section">
@@ -202,12 +203,11 @@
             <div class="column is-3 has-text-centered">
               <img src="./static/images/link1.png" class="interpolation-image"
                 alt="Interpolate start reference image." />
-                <p class="is-bold">End key view</p>
+              <p class="is-bold">Edited key view</p>
             </div>
             <div class="column interpolation-video-column">
               <video id="link1" autoplay muted loop playsinline height="100%">
-                <source src="./static/videos/new_link_ours.mp4"
-                        type="video/mp4">
+                <source src="./static/videos/new_link_ours.mp4" type="video/mp4">
               </video>
             </div>
             <div class="column is-3 has-text-centered">
@@ -217,8 +217,7 @@
             </div>
             <div class="column interpolation-video-column">
               <video id="link2" autoplay muted loop playsinline height="100%">
-                <source src="./static/videos/new_link_ours_2.mp4"
-                        type="video/mp4">
+                <source src="./static/videos/new_link_ours_2.mp4" type="video/mp4">
               </video>
             </div>
 
@@ -226,6 +225,37 @@
           <br />
           <!--/ Interpolating. -->
 
+        </div>
+      </div>
+
+
+      <div class="columns is-centered">
+        <div class="column is-full-width">
+          <h2 class="title is-4">Direct dataset modification</h2>
+          <div class="columns is-vcentered interpolation-panel">
+            <div class="column is-3 has-text-centered">
+              <img src="./static/images/link1.png" class="interpolation-image"
+                alt="Interpolate start reference image." />
+              <p class="is-bold">Edited key view</p>
+            </div>
+
+          </div>
+          <br />
+        </div>
+      </div>
+
+      <div class="columns is-centered">
+        <div class="column is-full-width">
+          <h2 class="title is-4">Qualatitive results</h2>
+          <div class="columns is-vcentered interpolation-panel">
+            <div class="column is-3 has-text-centered">
+              <img src="./static/images/link1.png" class="interpolation-image"
+                alt="Interpolate start reference image." />
+              <p class="is-bold">Edited key view</p>
+            </div>
+
+          </div>
+          <br />
         </div>
       </div>
       <!--/ Animation. -->
