--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="container is-max-desktop">
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
+        <div class="column is-full-width">
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
@@ -179,7 +179,7 @@
 
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
+        <div class="column column is-full-width">
           <h2 class="title is-3">ViCA-NeRF Pipeline</h2>
           <div class="content has-text-justified">
             ViCA-NeRF is an efficient, controllable NeRF editing pipeline which can edit 3D scenes with text
@@ -253,11 +253,11 @@
                 alt="Interpolate start reference image." />
               <p class="is-bold">Edited key view</p>
             </div>
-
           </div>
           <br />
         </div>
       </div>
+
       <!--/ Animation. -->
       <!-- Paper video. -->
       <!-- <div class="columns is-centered has-text-centered">
