--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
         <div class="column is-full-width">
           <h3 class="title is-4">Qualatitive results</h3>
           <div class="columns is-vcentered interpolation-panel">
-            <div class="column is-3 has-text-centered">
-              <img src="./static/images/link1.png" class="interpolation-image"
-                alt="Interpolate start reference image." />
-              <p class="is-bold">Edited key view</p>
+            <div class="column interpolation-video-column">
+              <video id="link2" autoplay muted loop playsinline height="100%">
+                <source src="./static/videos/nerfart.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
           <br />
