--- a/index.html
+++ b/index.html
@@ -176,7 +176,19 @@
   <section class="section">
     <div class="container is-max-desktop">
       <!--   <div class="container is-max-desktop"> -->
-
+        <div class="columns is-centered">
+          <div class="column is-full-width">
+            <h3 class="title is-4">How ViCA-NeRF edits 3D Scenes</h3>
+            <div class="columns is-vcentered interpolation-panel">
+              <div class="column interpolation-video-column">
+                <video id="link2" autoplay muted loop playsinline height="100%">
+                  <source src="./static/videos/vica_ani.mp4" type="video/mp4">
+                </video>
+              </div>
+            </div>
+            <br />
+          </div>
+        </div>
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
         <div class="column column is-full-width">
