--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <!--   <div class="container is-max-desktop"> -->
         <div class="columns is-centered">
           <div class="column is-full-width">
-            <h3 class="title is-4">How ViCA-NeRF edits 3D Scenes</h3>
+            <h3 class="title is-4">How ViCA-NeRF Edits 3D Scenes</h3>
             <div class="columns is-vcentered interpolation-panel">
               <div class="column interpolation-video-column">
                 <video id="link2" autoplay muted loop playsinline height="100%">
@@ -192,7 +192,7 @@
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
         <div class="column column is-full-width">
-          <h2 class="title is-3">ViCA-NeRF Pipeline</h2>
+          <h2 class="title is-3">Detailed ViCA-NeRF Pipeline</h2>
           <div class="content has-text-justified">
             ViCA-NeRF is an efficient, controllable NeRF editing pipeline which can edit 3D scenes with text
             instructions.
@@ -210,12 +210,12 @@
       <!-- Animation. -->
       <div class="columns is-centered">
         <div class="column is-full-width">
-          <h3 class="title is-4">Early control from 2D to 3D</h3>
+          <h3 class="title is-4">Early Control from 2D to 3D</h3>
           <div class="columns is-vcentered interpolation-panel">
             <div class="column is-3 has-text-centered">
               <img src="./static/images/link1.png" class="interpolation-image"
                 alt="Interpolate start reference image." />
-              <p class="is-bold">Edited key view</p>
+              <p class="is-bold">Edited Key View</p>
             </div>
             <div class="column interpolation-video-column">
               <video id="link1" autoplay muted loop playsinline height="100%">
@@ -225,7 +225,7 @@
             <div class="column is-3 has-text-centered">
               <img src="./static/images/link2.png" class="interpolation-image"
                 alt="Interpolation end reference image." />
-              <p class="is-bold">Edited key view</p>
+              <p class="is-bold">Edited Key View</p>
             </div>
             <div class="column interpolation-video-column">
               <video id="link2" autoplay muted loop playsinline height="100%">
@@ -241,9 +241,9 @@
       </div>
 
 
-      <div class="columns is-centered">
+      <!-- <div class="columns is-centered">
         <div class="column is-full-width">
-          <h3 class="title is-4">Direct dataset modification</h3>
+          <h3 class="title is-4">Direct Dataset modification</h3>
           <div class="columns is-vcentered interpolation-panel">
             <div class="column is-3 has-text-centered">
               <img src="./static/images/link1.png" class="interpolation-image"
@@ -254,7 +254,7 @@
           </div>
           <br />
         </div>
-      </div>
+      </div> -->
 
       <div class="columns is-centered">
         <div class="column is-full-width">
