--- a/index.html
+++ b/index.html
@@ -175,23 +175,10 @@
   </section>
   <section class="section">
     <div class="container is-max-desktop">
-      <!--   <div class="container is-max-desktop"> -->
-        <div class="columns is-centered">
-          <div class="column is-full-width">
-            <h3 class="title is-4">How ViCA-NeRF Edits 3D Scenes</h3>
-
-              <div class="column interpolation-video-column">
-                <video id="link2" autoplay muted loop playsinline height="100%">
-                  <source src="./static/videos/vica_ani.mp4" type="video/mp4">
-                </video>
-              </div>
-            <br />
-          </div>
-        </div>
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
         <div class="column column is-full-width">
-          <h2 class="title is-3">Detailed ViCA-NeRF Pipeline</h2>
+          <h2 class="title is-3">ViCA-NeRF Pipeline</h2>
           <div class="content has-text-justified">
             ViCA-NeRF is an efficient, controllable NeRF editing pipeline which can edit 3D scenes with text
             instructions.
@@ -200,6 +187,20 @@
           </div>
         </div>
       </div>
+      <!--   <div class="container is-max-desktop"> -->
+      <div class="columns is-centered">
+        <div class="column is-full-width">
+          <h3 class="title is-4">How ViCA-NeRF Edits 3D Scenes</h3>
+
+          <div class="column interpolation-video-column">
+            <video id="link2" autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/vica_ani.mp4" type="video/mp4">
+            </video>
+          </div>
+          <br />
+        </div>
+      </div>
+
       <!--/ Abstract. -->
     </div>
   </section>
@@ -210,7 +211,7 @@
       <div class="columns is-centered">
         <div class="column is-full-width">
           <h3 class="title is-4">Early Control from 2D to 3D</h3>
-          <div class="columns is-vcentered interpolation-panel">
+
             <div class="column is-3 has-text-centered">
               <img src="./static/images/link1.png" class="interpolation-image"
                 alt="Interpolate start reference image." />
@@ -232,7 +233,7 @@
               </video>
             </div>
 
-          </div>
+
           <br />
           <!--/ Interpolating. -->
 
@@ -258,13 +259,11 @@
       <div class="columns is-centered">
         <div class="column is-full-width">
           <h3 class="title is-4">Qualatitive results</h3>
-          <div class="columns is-vcentered interpolation-panel">
             <div class="column interpolation-video-column">
               <video id="link2" autoplay muted loop playsinline height="100%">
                 <source src="./static/videos/nerfart.mp4" type="video/mp4">
               </video>
             </div>
-          </div>
           <br />
         </div>
       </div>
