--- a/index.html
+++ b/index.html
@@ -213,22 +213,22 @@
           <h3 class="title is-4">Early Control from 2D to 3D</h3>
 
             <div class="column is-3 has-text-centered">
-              <img src="./static/images/link1.png" class="interpolation-image"
+              <img src="./static/images/link1.png" class="interpolation-image" width="20"
                 alt="Interpolate start reference image." />
               <p class="is-bold">Edited Key View</p>
             </div>
             <div class="column interpolation-video-column">
-              <video id="link1" autoplay muted loop playsinline height="100%">
-                <source src="./static/videos/new_link_ours.mp4" type="video/mp4">
+              <video id="link1" autoplay muted loop playsinline >
+                <source src="./static/videos/new_link_ours.mp4" type="video/mp4" width="30">
               </video>
             </div>
             <div class="column is-3 has-text-centered">
-              <img src="./static/images/link2.png" class="interpolation-image"
+              <img src="./static/images/link2.png" class="interpolation-image" width="20"
                 alt="Interpolation end reference image." />
               <p class="is-bold">Edited Key View</p>
             </div>
             <div class="column interpolation-video-column">
-              <video id="link2" autoplay muted loop playsinline height="100%">
+              <video id="link2" autoplay muted loop playsinline width="30">
                 <source src="./static/videos/new_link_ours_2.mp4" type="video/mp4">
               </video>
             </div>
