--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
           <div class="columns is-vcentered interpolation-panel">
             <div class="column is-3 has-text-centered">
-              <img src="./static/images/link1.png" class="interpolation-image"
+              <img src="./static/images/link1.png" class="interpolation-image" width="80%"
                 alt="Interpolate start reference image." />
               <p class="is-bold">Edited Key View</p>
             </div>
@@ -225,7 +225,7 @@
               </video>
             </div>
             <div class="column is-3 has-text-centered">
-              <img src="./static/images/link2.png" class="interpolation-image"
+              <img src="./static/images/link2.png" class="interpolation-image" width="80%"
                 alt="Interpolation end reference image." />
               <p class="is-bold">Edited Key View</p>
             </div>
