--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
         <div class="column column is-full-width">
           <h2 class="title is-3">ViCA-NeRF Pipeline</h2>
           <div class="content has-text-justified">
+            <p>
             ViCA-NeRF is an efficient, controllable NeRF editing pipeline which can edit 3D scenes with text
             instructions.
-            It shows better generalizability for various text instructions
+            It shows better generalizability for various text instructions.</p>
             <div class="paragraph">
               <p>
                 ViCA-NeRF leverages two sources of regularization to propagate editing information
