--- a/index.html
+++ b/index.html
@@ -267,9 +267,8 @@
           <h2 class="title is-3">Local Editing</h2>
           ViCA-NeRF can generate 3D mask for local editing. The user need to click and generate a mask on one view. ViCA-NeRF will propage this to other views and only modify the chosen object.
           <div class="column interpolation-video-column">
-            <video id="link2" autoplay muted loop playsinline height="100%">
-              <source src="./static/images/local_web.png" type="video/mp4">
-            </video>
+            <img src="./static/images/local_web.png" class="interpolation-image" height="100%"
+            alt="Interpolation end reference image." />
           </div>
           <br />
         </div>
@@ -279,8 +278,10 @@
           <div class="column is-full-width">
             <h2 class="title is-3">NeRF-Art results</h2>
             <div class="column interpolation-video-column">
-              <img src="./static/images/local_web.png" class="interpolation-image" height="100%"
-                alt="Interpolation end reference image." />
+              <video id="link2" autoplay muted loop playsinline height="100%">
+                <source src="./static/videos/nerfart.mp4" type="video/mp4">
+              </video>
+
             </div>
             <br />
           </div>
