--- a/index.html
+++ b/index.html
@@ -129,6 +129,38 @@
 </section> -->
 
 
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-steve">
+          <video poster="" id="s1" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/new_face.mp4"
+                    type="video/mp4">
+          </video>
+          <video poster="" id="s11" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/new_face.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-chair-tp">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/new_face.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-shiba">
+          <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/new_face.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <section class="section">
     <div class="container is-max-desktop">
