--- a/index.html
+++ b/index.html
@@ -129,7 +129,20 @@
 </section> -->
 
 
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <h2 class="subtitle has-text-centered">
+        Our ViCA-NeRF compared with Instruct-NeRF2NeRF.
+      </h2>
+      <video id="teaser" autoplay muted loop playsinline height="100%">
+        <source src="./static/videos/teaser.mp4"
+                type="video/mp4">
+      </video>
 
+    </div>
+  </div>
+</section>
 
 
   <section class="section">
@@ -137,11 +150,6 @@
 
       <div class="columns is-centered has-text-centered">
         <div class="column is-full-width">
-          <div class="column interpolation-video-column">
-            <video id="link1" autoplay muted loop playsinline>
-              <source src="./static/videos/teaser.mp4" type="video/mp4">
-            </video>
-          </div>
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
