--- a/index.html
+++ b/index.html
@@ -391,21 +391,13 @@
       booktitle = {NeurIPS},
       year = {2023},
      } 
-}</code></pre>
+</code></pre>
     </div>
   </section>
 
 
   <footer class="footer">
     <div class="container">
-      <div class="content has-text-centered">
-        <a class="icon-link" href="https://zsh2000.github.io/mtvs.github.io/static/paper/mtvs.pdf">
-          <i class="fas fa-file-pdf"></i>
-        </a>
-        <a class="icon-link" href="https://github.com/zsh2000/" class="external-link" disabled>
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
       <div class="columns is-centered">
         <div class="column is-8">
           <div class="content">
